added new models and more robust metadata parsing

--- a/public/index.html
+++ b/public/index.html
@@ -33,8 +33,11 @@
 						<button id="clear" class="btn btn-outline-secondary" type="button"><i class="far fa-times-circle"></i></button>
 					</div>
 
-					...loading...
 					<div id="list-group">
+						<div class="d-flex align-items-center">
+							<strong>Loading...</strong>
+							<div class="spinner-border ms-auto" role="status" aria-hidden="true"></div>
+						</div>
 						<!--<a href="#" class="list-group-item list-group-item-action active" aria-current="true">
 							<div class="d-flex w-100 justify-content-between">
 								<h5 class="mb-1">{{model.title}}</h5>
