--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	</script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap.min.css" rel="stylesheet" media="(prefers-color-scheme: light)">
+	<script src="https://cdn.jsdelivr.net/npm/@eastdesire/jscolor@2.4.6/jscolor.min.js"></script>
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link href="style.css" rel="stylesheet">
@@ -53,7 +54,20 @@
 				<div class="col-8">
 					<!--<canvas id="viewport"></canvas>-->
 					<div id="viewport"></div>
-					<button id="save" type="button" class="btn btn-primary"> <i class="fas fa-save"></i> Save Image </button>
+
+					<div class="mb-3">
+						<label for="customRange1" class="form-label">Brightness</label>
+						<input type="range" class="form-range" id="brightness">
+					</div>
+
+					<div class="mb-3">
+						<label for="colorpicker" class="form-label">Background color</label>
+						<input id="color-picker" class="form-control" onInput="setColor(this.jscolor, '#pr4')" value="#21836E00" data-jscolor="{}">
+					</div>
+
+					<div class="mb-3">
+						<button id="save" type="button" class="btn btn-primary"> <i class="fas fa-save"></i> Save Image </button>
+					</div>
 				</div>
 			</div>
 		</div>
