--- a/public/index.html
+++ b/public/index.html
@@ -14,23 +14,31 @@
 		);
 	}
 	</script>
+	<link rel="icon" type="image/png" href="favicon.png">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap.min.css" rel="stylesheet" media="(prefers-color-scheme: light)">
 	<script src="https://cdn.jsdelivr.net/npm/@eastdesire/jscolor@2.4.6/jscolor.min.js"></script>
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link href="style.css" rel="stylesheet">
-	<title>SCTE Object Library</title>
+	<title>Object Library (SCTE)</title>
 	</head>
 	<body>
 	<main>
 
 		<div class="container">
+
+			<nav class="navbar navbar-light bg-light">
+				<div class="container-fluid">
+					<a class="navbar-brand" href="#"><i class="fas fa-tools"></i> SCTE Object Library </a>
+				</div>
+			</nav>
+
 			<div class="row">
 				<div class="col-sm">
 					<div class="input-group mb-3">
 						<span class="input-group-text" id="basic-addon1"><i class="fas fa-search"></i></span>
-						<input id="search" type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+						<input id="search" type="text" class="form-control" placeholder="search" aria-label="search" aria-describedby="basic-addon1">
 						<button id="clear" class="btn btn-outline-secondary" type="button"><i class="far fa-times-circle"></i></button>
 					</div>
 
@@ -55,24 +63,55 @@
 					<!--<canvas id="viewport"></canvas>-->
 					<div id="viewport"></div>
 
-					<div class="mb-3">
-						<label for="customRange1" class="form-label">Brightness</label>
-						<input type="range" class="form-range" id="brightness">
+					<div class="row">
+						<div class="col">
+
+							<div class="mb-3">
+								<label for="customRange1" class="form-label">Brightness</label>
+								</i><input type="range" class="form-range" id="brightness">
+							</div>
+
+							<label for="colorpicker" class="form-label">Background color</label>
+							<input id="color-picker" class="form-control" onInput="setColor(this.jscolor, '#pr4')" value="#21836EFF" data-jscolor="{previewSize:60}">
+
+						</div>
+						<div class="col">
+
+
+							<div class="mb-3">
+								<label for="colorpicker" class="form-label">Image size (pixels)</label>
+								<div class="input-group">
+									<span class="input-group-text" id="basic-addon1"><i class="fa fa-crop" aria-hidden="true"></i></span>
+									<span class="input-group-text" id="basic-addon1">Width</span>
+									<input id="image-width"  type="text" aria-label="Image Width" class="form-control" placeholder="width" value="800">
+									<span class="input-group-text" id="basic-addon1">Height</span>
+									<input id="image-height" type="text" aria-label="Image Height" class="form-control" placeholder="height" value="600">
+								</div>
+							</div>
+		
+							<div class="mb-3 text-right">
+								<label for="save" class="form-label">Save to Disk</label>
+								<button id="save" type="button" class="btn btn-primary form-control"> <i class="fas fa-save"></i> Save Image </button>
+							</div>
+
+						</div>
 					</div>
 
-					<div class="mb-3">
-						<label for="colorpicker" class="form-label">Background color</label>
-						<input id="color-picker" class="form-control" onInput="setColor(this.jscolor, '#pr4')" value="#21836E00" data-jscolor="{}">
-					</div>
 
-					<div class="mb-3">
-						<button id="save" type="button" class="btn btn-primary"> <i class="fas fa-save"></i> Save Image </button>
-					</div>
+
 				</div>
 			</div>
 		</div>
 
 	</main>
 	<script type="module" src="behavior.js"></script>
+	<script>
+		jscolor.presets.default = {
+			value: '#00AEEFFF',
+			position: 'top',
+			backgroundColor: '#333',
+			palette: '#00AEEFFF #55BAE1FF #14477DFF #B6D8E9FF #B3C935FF #F17A28FF #53575A #FFFFFFFF #00000000',
+		};
+	</script>
 </body>
 </html>
