--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 		document.documentElement.style.display = "none";
 		document.head.insertAdjacentHTML(
 		"beforeend",
-		"<link id=\"css\" rel=\"stylesheet\" href=\"../dist/css/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
+		"<link id="css" rel="stylesheet" href="../dist/css/bootstrap.css" onload="document.documentElement.style.display = ''">"
 		);
 	}
 	</script>
