--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
 		document.documentElement.style.display = "none";
 		document.head.insertAdjacentHTML(
 		"beforeend",
-		"<link id="css" rel="stylesheet" href="../dist/css/bootstrap.css" onload="document.documentElement.style.display = ''">"
+		"<link id=\"css\" rel=\"stylesheet\" href=\"../dist/css/bootstrap.css\" onload=\"document.documentElement.style.display = ''\">"
 		);
 	}
 	</script>
 	<link rel="icon" type="image/png" href="favicon.png">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-night.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap.min.css" rel="stylesheet" media="(prefers-color-scheme: light)">
-	<script src="https://cdn.jsdelivr.net/npm/@eastdesire/jscolor@2.4.6/jscolor.min.js"></script>
+	<link href="/css/bootstrap-night.min.css" rel="stylesheet" media="(prefers-color-scheme: dark)">
+	<link href="/css/bootstrap.min.css" rel="stylesheet" media="(prefers-color-scheme: light)">
+	<script src="/js/jscolor.min.js"></script>
 	
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link href="style.css" rel="stylesheet">
@@ -103,8 +103,8 @@
 			</div>
 		</div>
 
+		<!--<canvas id="ctest"></canvas>-->
 	</main>
-	<script type="module" src="behavior.js"></script>
 	<script>
 		jscolor.presets.default = {
 			value: '#00AEEFFF',
@@ -113,5 +113,8 @@
 			palette: '#00AEEFFF #55BAE1FF #14477DFF #B6D8E9FF #B3C935FF #F17A28FF #53575A #FFFFFFFF #00000000',
 		};
 	</script>
+	<script type="text/javascript" src="https://unpkg.com/canvg@3.0.4/lib/umd.js"></script>
+	<script type="module" src="js/svg-pan-zoom.js"></script>
+	<script type="module" src="js/behavior.js"></script>
 </body>
 </html>
