make canvg local

--- a/public/index.html
+++ b/public/index.html
@@ -113,7 +113,7 @@
 			palette: '#00AEEFFF #55BAE1FF #14477DFF #B6D8E9FF #B3C935FF #F17A28FF #53575A #FFFFFFFF #00000000',
 		};
 	</script>
-	<script type="text/javascript" src="https://unpkg.com/canvg@3.0.4/lib/umd.js"></script>
+	<script type="text/javascript" src="js/umd.js"></script>
 	<script type="module" src="js/svg-pan-zoom.js"></script>
 	<script type="module" src="js/behavior.js"></script>
 </body>
