added behavior and title overlay options to embed

--- a/public/embed.html
+++ b/public/embed.html
@@ -10,6 +10,20 @@
 			margin: 0px;
 			padding: 0px;
 		}
+
+		#overlay {
+			position: relative;
+			width: 80%;
+			background-color: #3939399e;
+			bottom: 55px;
+			margin: auto;
+			padding: 5px;
+			text-align: center;
+			color: white;
+			font-size: x-large;
+			font-family: arial;
+			border-radius: 6px;
+		}
 	</style>
 	</head>
 	<body>
