--- a/public/index.html
+++ b/public/index.html
@@ -116,13 +116,26 @@
 					<div id="embed-iframe"></div>
 
 					<div class="mb-3">
+						<input id="overlay-bool" class="form-check-input" type="checkbox" value="true" id="flexCheckDefault">
+						Overlay the object's title on the embed
+					</div>
+
+					<div class="mb-3">
+						<label for="b-type" class="form-label">Object behavior</label>
+						<select id="behavior-type" class="form-select form-select-sm" aria-label=".form-select-sm example">
+							<option value="1" selected>Spin</option>
+							<option value="2">Still</option>
+						</select>
+					</div>
+
+					<div class="mb-3">
 						<label for="embed-size" class="form-label">Embed size (pixels)</label>
 						<div class="input-group">
 							<span class="input-group-text" id="basic-addon1"><i class="fa fa-crop" aria-hidden="true"></i></span>
 							<span class="input-group-text" id="basic-addon1">Width</span>
-							<input id="embed-width" type="text" aria-label="Image Width" class="form-control" placeholder="width" value="800">
+							<input id="embed-width" type="text" aria-label="Image Width" class="form-control" placeholder="width" value="350">
 							<span class="input-group-text" id="basic-addon1">Height</span>
-							<input id="embed-height" type="text" aria-label="Image Height" class="form-control" placeholder="height" value="600">
+							<input id="embed-height" type="text" aria-label="Image Height" class="form-control" placeholder="height" value="300">
 						</div>
 					</div>
 
